# shenduxuexi

./: README.md  pyproject.toml  run.py  run2.py
data/: kline_boxes_echarts.html  klines_5m.csv  your_5f_data.csv
model/: lstm_model.pt
