[project]
name = "myapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ccxt (>=4.4.94,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "myapp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
